<resources>
    <string name="app_name">MyCalc</string>
    <string name="clear">c</string>
    <string name="plus">+</string>
    <string name="minus">—</string>
    <string name="power">^</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="division">÷</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="multiply">×</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="parentheses">( )</string>
    <string name="percent">%</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="equals">=</string>

    <string name="display_hint">input here</string>
    <string name="backspace_icon">backspace icon</string>
</resources>